<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal1_200"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="88dp"
        android:src="@mipmap/image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:gravity="center"
        android:text="@string/label_authorization"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_input_login"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_input_pass"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hint_input_name"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:backgroundTint="#1E78C6"
        android:text="@string/text_enter" />


</LinearLayout>

