<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/teal1_200">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="93dp"
        android:layout_height="88dp"
        app:srcCompat="@mipmap/image" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:gravity="center"
        android:text="@string/search"
        android:textSize="28sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/search1"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/searchEnter"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:text="@string/s_enter" />



</LinearLayout>

