<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NavigateActivity">


    <TextView
        android:id="@+id/tv_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/news"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/hammer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/hammer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/news_hammer"
        app:layout_constraintBottom_toTopOf="@+id/disk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_news"
        tools:layout_editor_absoluteX="72dp" />

    <Button
        android:id="@+id/disk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_disk"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/spear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hammer"
        tools:layout_editor_absoluteX="72dp" />

    <Button
        android:id="@+id/spear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_spear"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disk"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="72dp" />

</androidx.constraintlayout.widget.ConstraintLayout>